--- a/README.Rmd
+++ b/README.Rmd
@@ -8,12 +8,13 @@
 `gridpattern` provides [grid.pattern() and
 patternGrob()](http://trevorldavis.com/R/gridpattern/dev/reference/grid.pattern.html)
 functions to use with R's grid graphics system. They fill in a
-user-specified boundary path with a user-specified pattern. These pattern grobs are
+user-specified boundary path with a user-specified pattern. These pattern grobs include
 enhanced versions of the patterns originally contained within 
 [Mike FC](https://github.com/coolbutuseless)'s awesome
 [ggpattern](https://github.com/coolbutuseless/ggpattern) package 
 (which provides patterned ``ggplot2`` "geom" functions but 
-[does not provide exported access to the underlying grobs](https://github.com/coolbutuseless/ggpattern/issues/11) themselves).
+[does not provide exported access to the underlying grobs](https://github.com/coolbutuseless/ggpattern/issues/11) themselves) as well
+as completely new patterns.
 
 We currently provide `grid` grob support for the following patterns:
 
@@ -27,9 +28,10 @@ We currently provide `grid` grob support for the following patterns:
 7.  none (equivalent to `grid::null()`)
 8.  [placeholder](https://trevorldavis.com/R/gridpattern/dev/reference/grid.pattern_placeholder.html): placeholder image array patterns
 9.  [plasma](https://trevorldavis.com/R/gridpattern/dev/reference/grid.pattern_plasma.html): plasma array patterns
-10. [stripe](https://trevorldavis.com/R/gridpattern/dev/reference/grid.pattern_stripe.html): stripe geometry patterns
-11. [custom ggpattern geometry-based patterns](https://coolbutuseless.github.io/package/ggpattern/articles/developing-patterns-2.html)
-12. [custom ggpattern array-based patterns](https://coolbutuseless.github.io/package/ggpattern/articles/developing-patterns-3.html)
+10. [regular_polygon](https://trevorldavis.com/R/gridpattern/dev/reference/grid.pattern_regular_polygon.html): regular polygon geometry patterns
+11. [stripe](https://trevorldavis.com/R/gridpattern/dev/reference/grid.pattern_stripe.html): stripe geometry patterns
+12. [custom ggpattern geometry-based patterns](https://coolbutuseless.github.io/package/ggpattern/articles/developing-patterns-2.html)
+13. [custom ggpattern array-based patterns](https://coolbutuseless.github.io/package/ggpattern/articles/developing-patterns-3.html)
 
 ## Installation
 
@@ -78,6 +80,16 @@ grid.pattern("placeholder", x_hex, y_hex, type="bear")
 ```
 ```{r plasma}
 grid.pattern("plasma", x_hex, y_hex, fill="green")
+```
+```{r regular_star}
+grid.pattern_regular_polygon(x_hex, y_hex, colour = "black", fill = c("blue", "yellow"),
+                             density = 1.0, spacing = 0.1, shape = "star8")
+```
+```{r regular_hex}
+grid.pattern_regular_polygon(x_hex, y_hex, color = "transparent",
+                             fill = c("white", "grey", "black"),
+                             density = 1.0, spacing = 0.1,
+                             shape = "convex6", type = "hex")
 ```
 ```{r stripe}
 grid.pattern("stripe", x_hex, y_hex, colour="black", fill=c("blue", "yellow"),
