--- a/README.Rmd
+++ b/README.Rmd
@@ -59,7 +59,8 @@ y_hex <- 0.5 + 0.5 * sin(seq(2 * pi / 4, by = 2 * pi / 6, length.out = 6))
 grid.pattern("ambient", x_hex, y_hex, fill = "blue", fill2 = "yellow")
 ```
 ```{r circle}
-grid.pattern("circle", x_hex, y_hex, colour="blue", fill="yellow", density=0.3)
+grid.pattern_circle(x_hex, y_hex, density = 0.7, type = "hex",
+                    fill = c("blue", "yellow", "red"))
 ```
 ```{r crosshatch}
 grid.pattern("crosshatch", x_hex, y_hex, colour="black", fill="blue", 
