--- a/README.Rmd
+++ b/README.Rmd
@@ -100,14 +100,17 @@ grid.pattern("stripe", x_hex, y_hex, colour="black", fill=c("blue", "yellow"),
 
 ## Using these patterns with the "ggpattern" package
 
-The patterns provided by ``gridpattern`` can be used to create [custom ggpattern geometry-based patterns](https://coolbutuseless.github.io/package/ggpattern/articles/developing-patterns-2.html).  Here is an example of creating a new  "multicolor_stripe" pattern that supports comma-separated ``pattern_fill`` and/or ``pattern_colour`` aesthetics:
+The patterns provided by ``gridpattern`` can be used to create [custom ggpattern geometry-based patterns](https://coolbutuseless.github.io/package/ggpattern/articles/developing-patterns-2.html).  
+
+Here is an example of creating a new  "multicolor_stripe" pattern that supports comma-separated ``pattern_fill`` and/or ``pattern_colour`` aesthetics:
 
 ```{r ggpattern}
 library("ggpattern") # remotes::install_github("coolbutuseless/ggpattern")
 library("ggplot2", warn.conflicts = FALSE)
 library("gridpattern")
 
-multicolor_stripe_pattern <- function(params, boundary_df, aspect_ratio, legend) {
+multicolor_stripe_pattern <- function(params, boundary_df, aspect_ratio, 
+                                      legend = FALSE) {
     args <- as.list(params)
     args <- args[grep("^pattern_", names(args))]
 
@@ -129,4 +132,39 @@ ggplot(df, aes(trt, outcome)) +
     geom_col_pattern(aes(fill = trt), colour = 'black', 
                      pattern = 'multicolor_stripe',
                      pattern_fill = "grey30,grey70,white,grey70")
+```
+
+And here is an example of creating a "hex_tile" pattern that creates
+a three-color hexagonal tiling using the ``fill`` colour, the ``pattern_fill`` colour,
+and their "average" color.
+
+```{r hex_ggpattern}
+hex_pattern <- function(params, boundary_df, aspect_ratio, legend = FALSE) {
+    args <- as.list(params)
+    args <- args[grep("^pattern_", names(args))]
+
+    # hexagonal tiling using "regular_polygon" pattern
+    args$pattern <- "regular_polygon"
+    args$pattern_density <- 1
+    args$pattern_shape <- "convex6"
+    args$pattern_type <- "hex"
+
+    if (legend) args$pattern_spacing <- 0.5 * args$pattern_spacing
+
+    # three-color tiling using `fill`, `pattern_fill` and their "average"
+    avg_col <- gridpattern::mean_col(params$fill, params$pattern_fill)
+    args$pattern_fill <- c(args$pattern_fill, avg_col, params$fill)
+
+    args$x <- boundary_df$x
+    args$y <- boundary_df$y
+    args$id <- boundary_df$id
+    args$prefix <- ""
+
+    do.call(gridpattern::patternGrob, args)
+}
+
+options(ggpattern_geometry_funcs = list(hex_tile = hex_pattern))
+df <- data.frame(trt = c("a", "b", "c"), outcome = c(2.3, 1.9, 3.2))
+ggplot(df, aes(trt, outcome)) +
+    geom_col_pattern(aes(fill = trt), pattern = 'hex_tile', pattern_angle = 45)
 ```
