--- a/README.Rmd
+++ b/README.Rmd
@@ -84,8 +84,10 @@ grid.pattern("placeholder", x_hex, y_hex, type="bear")
 grid.pattern("plasma", x_hex, y_hex, fill="green")
 ```
 ```{r regular_star}
-grid.pattern_regular_polygon(x_hex, y_hex, colour = "black", fill = c("blue", "yellow"),
-                             density = 1.0, spacing = 0.1, shape = "star8")
+grid.pattern_regular_polygon(x_hex, y_hex, colour = "black", 
+                             fill = c("blue", "yellow", "red"), 
+                             shape = c("convex4", "star8", "circle"),
+                             density = 0.4, spacing = 0.08, angle = 0)
 ```
 ```{r regular_hex}
 grid.pattern_regular_polygon(x_hex, y_hex, color = "transparent",
