feat: Vectorize 'density' argument for 'regular_polygon' and 'circle'
Vectorizes 'density' argument for 'regular_polygon' and 'circle'
patterns

closes #28

--- a/README.Rmd
+++ b/README.Rmd
@@ -87,7 +87,8 @@ grid.pattern("plasma", x_hex, y_hex, fill="green")
 grid.pattern_regular_polygon(x_hex, y_hex, colour = "black", 
                              fill = c("blue", "yellow", "red"), 
                              shape = c("convex4", "star8", "circle"),
-                             density = 0.4, spacing = 0.08, angle = 0)
+                             density = c(0.45, 0.42, 0.4), 
+                             spacing = 0.08, angle = 0)
 ```
 ```{r regular_hex}
 grid.pattern_regular_polygon(x_hex, y_hex, color = "transparent",
