--- a/README.Rmd
+++ b/README.Rmd
@@ -30,8 +30,9 @@ We currently provide `grid` grob support for the following patterns:
 9.  [plasma](https://trevorldavis.com/R/gridpattern/dev/reference/grid.pattern_plasma.html): plasma array patterns
 10. [regular_polygon](https://trevorldavis.com/R/gridpattern/dev/reference/grid.pattern_regular_polygon.html): regular polygon geometry patterns
 11. [stripe](https://trevorldavis.com/R/gridpattern/dev/reference/grid.pattern_stripe.html): stripe geometry patterns
-12. [custom ggpattern geometry-based patterns](https://coolbutuseless.github.io/package/ggpattern/articles/developing-patterns-2.html)
-13. [custom ggpattern array-based patterns](https://coolbutuseless.github.io/package/ggpattern/articles/developing-patterns-3.html)
+12. [weave](https://trevorldavis.com/R/gridpattern/dev/reference/grid.pattern_weave.html): weave geometry patterns
+13. [custom ggpattern geometry-based patterns](https://coolbutuseless.github.io/package/ggpattern/articles/developing-patterns-2.html)
+14. [custom ggpattern array-based patterns](https://coolbutuseless.github.io/package/ggpattern/articles/developing-patterns-3.html)
 
 ## Installation
 
@@ -44,61 +45,35 @@ remotes::install_github("trevorld/gridpattern")
 
 ## Examples
 
-```{r setup, echo = FALSE}
+```{r hidden, echo = FALSE}
 knitr::opts_chunk$set(fig.path = "man/figures/README-", fig.cap = '')
-set.seed(42)
 ```
 
-```{r hex}
+```{r setup}
 library("ambient")
 library("gridpattern")
 x_hex <- 0.5 + 0.5 * cos(seq(2 * pi / 4, by = 2 * pi / 6, length.out = 6))
 y_hex <- 0.5 + 0.5 * sin(seq(2 * pi / 4, by = 2 * pi / 6, length.out = 6))
 ```
 
-```{r ambient}
-grid.pattern("ambient", x_hex, y_hex, fill = "blue", fill2 = "yellow")
-```
 ```{r circle}
-grid.pattern_circle(x_hex, y_hex, density = 0.7, type = "hex_circle",
+grid.pattern_circle(x_hex, y_hex, density = 0.5, type = "hex_circle",
                     fill = c("blue", "yellow", "red"))
 ```
-```{r crosshatch}
-grid.pattern("crosshatch", x_hex, y_hex, colour="black", fill="blue", 
-             fill2 = "yellow", density = 0.5, angle = 135)
-```
-```{r gradient}
-grid.pattern("gradient", x_hex, y_hex, fill = "blue", fill2 = "yellow")
-```
-```{r image}
-logo_filename   <- system.file("img", "Rlogo.png" , package = "png")
-grid.pattern("image", x_hex, y_hex, filename = logo_filename, type = "tile")
-```
-```{r magick}
-grid.pattern("magick", x_hex, y_hex, type="octagons", fill="blue", scale=2)
-```
-```{r placeholder}
-grid.pattern("placeholder", x_hex, y_hex, type="bear")
-```
-```{r plasma}
-grid.pattern("plasma", x_hex, y_hex, fill="green")
-```
 ```{r regular_star}
-grid.pattern_regular_polygon(x_hex, y_hex, colour = "black", 
-                             fill = c("blue", "yellow", "red"), 
-                             shape = c("convex4", "star8", "circle"),
-                             density = c(0.45, 0.42, 0.4), 
-                             spacing = 0.08, angle = 0)
+grid.pattern_regular_polygon(x_hex, y_hex, shape = c("convex4", "star8", "circle"),
+                             colour = "black", fill = c("blue", "yellow", "red"), 
+                             density = c(0.45, 0.42, 0.4), spacing = 0.08, angle = 0)
 ```
 ```{r regular_hex}
-grid.pattern_regular_polygon(x_hex, y_hex, color = "transparent",
-                             fill = c("white", "grey", "black"),
-                             density = 1.0, spacing = 0.1,
-                             shape = "convex6", type = "hex")
+grid.pattern_regular_polygon(x_hex, y_hex, shape = "convex6", type = "hex",
+                             color = "transparent", fill = c("white", "grey", "black"),
+                             density = 1.0, spacing = 0.1)
 ```
-```{r stripe}
-grid.pattern("stripe", x_hex, y_hex, colour="black", fill=c("blue", "yellow"),
-             density = 0.5, angle = 135)
+```{r weave}
+grid.pattern("weave", x_hex, y_hex, type = "satin", 
+             colour = "black", fill = "lightblue", fill2 =  "yellow",
+             density = 0.3)
 ```
 
 ## Using these patterns with the "ggpattern" package
